<resources>
    <string name="app_name">KitLog</string>

    <string name="autenticated">Authenticated</string>

    <string name="registerProduct">Register</string>
    <string name="showProduct">Show</string>
    <string name="removeProduct">Remove</string>

    <string name="mockScanTitle">Mock Scan Code - Enter Code</string>

    <string name="productNameTitle">Unknown code {0} - Please enter product</string>
    <string name="productNewCreated">New product created</string>

    <string name="createItemGroupNameTitle">Create New Item Group</string>
    <string name="renameItemGroupNameTitle">Rename Item Group</string>
    <string name="itemGroupNameMessage">Please enter name</string>
    <string name="createdItemGroup">Item group created</string>
    <string name="renamedItemGroup">Item group renamed</string>
    <string name="removedItemGroup">Item group removed</string>
    <string name="confirmRemoveItemGroupNameTitle">Are you sure you want to remove this item group?</string>

    <string name="scanNotInstalledTitle">Supporting Application Needed</string>
    <string name="scanNotInstalledMessage">In order to use this application you\'ll need to install ZXing barcode scanner from Android Market</string>

    <string name="noResultTitle">No Result Received</string>
    <string name="noResultMessage">Cancelled</string>

    <string name="drawerMenuRecent">Recent</string>
    <string name="drawerMenuNewItemGroup">New Item Group</string>

    <string name="inputDialogOk">OK</string>
    <string name="inputDialogCancel">Cancel</string>
    <string name="inputDialogClose">Close</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="actionBarSearchAlt">Search</string>
    <string name="actionBarNewAlt">New</string>
    <string name="actionBarRemoveAlt">Remove</string>
    <string name="actionBarNewItemGroup">New Item Group</string>
    <string name="actionBarRenameItemGroup">Rename Item Group</string>
    <string name="actionBarRemoveItemGroup">Remove Item Group</string>
    <string name="actionBarMoreAlt">More</string>

    <string name="notFoundTitle">Not Found</string>
    <string name="itemWithCodeNotFoundMessage">No item with this code found</string>
    <string name="itemNewCreated">Item stored</string>
    <string name="removedItem">Item removed</string>

    <string name="selectItemGroupTitle">Select Item Group</string>
    <string name="selectItemGroupCancelled">Scanned item discarded</string>

    <string name="errorIntro">Error: </string>

    <string name="fieldRequired">Non-empty input required</string>

    <string name="itemListCountItem">Count %d</string>
    <string name="itemPopupRename">Rename product</string>
    <string name="itemPopupMove">Move to group…</string>
    <string name="itemPopupRemove">Remove</string>
    <string name="productRenameTitle">Rename product</string>
    <string name="itemProductRenamed">Product renamed</string>
    <string name="itemMoveCancelled">Item move cancelled</string>
    <string name="itemMovedToItemGroup">One item {0} moved to item group {1}</string>

    <string name="changedItemAmount">Amount updated</string>

    <string name="searchTitle">Search</string>
    <string name="fullItem">Full</string>
    <string name="emptyItem">Empty</string>
</resources>