<menu xmlns:a="http://schemas.android.com/apk/res/android">
    <item a:id="@+id/action_bar_scan_new"
          a:icon="@drawable/scan_plus"
          a:title="@string/actionBarNewAlt"
          a:showAsAction="always"/>
    <item a:id="@+id/action_bar_scan_remove"
          a:icon="@drawable/scan_minus"
          a:title="@string/actionBarRemoveAlt"
          a:showAsAction="always"/>
    <item a:icon="@drawable/ic_action_overflow"
          a:showAsAction="always"
          a:title="@string/actionBarMoreAlt">
        <menu>
            <item a:id="@+id/actionBarSearch"
                  a:icon="@drawable/ic_action_search"
                  a:title="@string/actionBarSearchAlt"/>
            <item a:id="@+id/action_bar_new_item_group"
                  a:title="@string/actionBarNewItemGroup"/>
            <item a:id="@+id/action_bar_rename_item_group"
                  a:title="@string/actionBarRenameItemGroup"/>
            <item a:id="@+id/action_bar_remove_item_group"
                  a:title="@string/actionBarRemoveItemGroup"/>
        </menu>
    </item>
</menu>